# root-rs

./: Cargo.toml  README.md  build.rs
.github/workflows/: cmake-single-platform.yml  cmake-single-platform.yml.OLD  rust.yml  ubuntu.yml
docs/: README.md  add_a_class.md  add_class.md
examples/: basic.rs  histogram_1d.rs
root-rs-c-bindings/: CMakeLists.txt  a.py  config.h  config.in.h  in.h
root-rs-c-bindings/cmake/: OLD_root_dep.cmake  root_dep.cmake
root-rs-c-bindings/include/: root-rs-c-bindings.h
root-rs-c-bindings/include/root-rs-c-bindings/: TApplication.h  TArray.h  TArrayD.h  TArrayF.h  TAttFill.h  TAttLine.h  TAttMarker.h  TAttPad.h  TCanvas.h  TCanvasImp.h  TF1.h  TGCompositeFrame.h  TGFrame.h  TGMainFrame.h  TGObject.h  TGWindow.h  TH1.h  TH1D.h  TH1F.h  TNamed.h  TObject.h  TPad.h  TQObject.h  TRootCanvas.h  TVirtualPad.h  _all.h
root-rs-c-bindings/src/: TApplication.cpp  TArray.cpp  TArrayD.cpp  TArrayF.cpp  TAttFill.cpp  TAttLine.cpp  TAttMarker.cpp  TAttPad.cpp  TCanvas.cpp  TCanvasImp.cpp  TF1.cpp  TGCompositeFrame.cpp  TGFrame.cpp  TGMainFrame.cpp  TGObject.cpp  TGWindow.cpp  TH1.cpp  TH1D.cpp  TH1F.cpp  TNamed.cpp  TObject.cpp  TPad.cpp  TQObject.cpp  TRootCanvas.cpp  TVirtualPad.cpp  _basic_impl.cpp
src/: core.rs  ffi.rs  function.rs  gui.rs  histogram.rs  lib.rs  main.rs
src/core/: application.rs  array.rs  arrayd.rs  arrayf.rs  att_fill.rs  att_line.rs  att_marker.rs  att_pad.rs  canvas.rs  canvas_imp.rs  named.rs  object.rs  pad.rs  q_object.rs  root_canvas.rs
src/function/: tf1.rs
src/gui/: g_composite_frame.rs  g_frame.rs  g_main_frame.rs  g_object.rs  g_window.rs
src/histogram/: th1.rs  th1d.rs  th1f.rs
